<resources>
    <string name="app_name">Samples</string>
    <string name="common_start_record_log">开始记录日志</string>
    <string name="common_stop_record_log">停止记录日志</string>
    <string name="nav_title_main">首页</string>
    <string name="nav_title_intent_main">意图首页</string>
    <string name="nav_title_intent_main_desc">意图相关页面的入口页面</string>
    <string name="nav_title_increment_update">增量更新_OLD</string>
    <string name="nav_title_increment_update_desc">增量更新功能演示_OLD</string>
    <string name="nav_title_intent_with_bundle">带参数登录跳转</string>
    <string name="nav_title_intent_with_bundle_desc">携带不同的参数,隐式意图登录跳转</string>
    <string name="nav_title_intent_without_bundle">不携带参数登录跳转</string>
    <string name="nav_title_intent_without_bundle_desc">不携带参数,隐式意图登录跳转</string>
    <string name="nav_title_intent_login">登录</string>
    <string name="nav_title_service_main">服务</string>
    <string name="nav_title_service_main_desc">服务功能主界面</string>
    <string name="nav_title_service_local_service">Local服务</string>
    <string name="nav_title_service_local_service_desc">Local服务基本功能[start/stop/bind/unbind]</string>
    <string name="nav_title_service_local_service_second">Local服务第二界面</string>
    <string name="nav_title_service_remote_service">Remote服务</string>
    <string name="nav_title_service_remote_service_desc">Remote服务基本功能[start/stop/bind/unbind]</string>
    <string name="nav_title_receiver_main">广播</string>
    <string name="nav_title_receiver_main_desc">广播功能主界面</string>
    <string name="nav_title_custom_main">自定义功能</string>
    <string name="nav_title_custom_main_desc">自定义功能主界面</string>
    <string name="nav_title_custom_lrmenu_main">自定义左右菜单</string>
    <string name="nav_title_custom_lrmenu_main_desc">左右两侧菜单，菜单不同布局不同显示</string>
    <string name="nav_title_custom_trebling_view">测试三重View</string>
    <string name="nav_title_custom_trebling_view_desc">三重View左右两侧不同背景，不同文字</string>
    <string name="nav_title_custom_wave_view">波浪View</string>
    <string name="nav_title_custom_wave_view_desc">波浪View</string>
    <string name="nav_title_custom_stroke_text_view">描边文本View</string>
    <string name="nav_title_custom_stroke_text_view_desc">带有描边的文字</string>
    <string name="nav_title_custom_loading_view">加载View</string>
    <string name="nav_title_custom_loading_view_desc">波纹加载页面</string>
    <string name="nav_title_system_function_main">系统功能</string>
    <string name="nav_title_system_function_main_desc">系统的主要功能相关开发</string>
    <string name="nav_title_system_function_multipoint">多点触摸</string>
    <string name="nav_title_system_function_multipoint_desc">多点触摸功能</string>
    <string name="nav_title_system_function_sensor_main">传感器主界面</string>
    <string name="nav_title_system_function_sensor_main_desc">系统传感器相关信息</string>
    <string name="nav_title_system_function_sensor_info">手机上的传感器</string>
    <string name="nav_title_system_function_sensor_info_desc">手机上的各个传感器信息</string>
    <string name="nav_title_system_function_motion_sensor">动作传感器</string>
    <string name="nav_title_system_function_motion_sensor_desc">各个动作传感器的数据操作</string>
    <string name="nav_title_system_function_nfc_main">NFC功能主界面</string>
    <string name="nav_title_system_function_nfc_main_desc">NFC功能的主要界面</string>
    <string name="nav_title_system_function_bluetooth_main">蓝牙功能主界面</string>
    <string name="nav_title_system_function_bluetooth_main_desc">蓝牙功能：基本打开蓝牙、静默打开蓝牙、打开蓝牙可被检查、搜索蓝牙、蓝牙连接及传递数据</string>
    <string name="nav_title_system_function_wifi_direct">Wi-Fi P2P</string>
    <string name="nav_title_system_function_wifi_direct_desc">Wi-Fi P2P：两个4.0+设备通过Wi-Fi P2P进行连接，并传递数据</string>
    <string name="nav_title_system_function_gps_main">GPS主界面</string>
    <string name="nav_title_system_function_gps_main_desc">GPS列表、</string>
    <string name="nav_title_system_function_gps_location_provider">GPS提供者列表页面</string>
    <string name="nav_title_system_function_gps_location_provider_desc">手机上的GPS提供者信息</string>
    <string name="nav_title_system_function_gps_location_info">GPS位置信息</string>
    <string name="nav_title_system_function_gps_location_info_desc">手机上的GPS位置信息（经度、纬度、高度、速度、方向），两点之间的距离</string>
    <string name="nav_title_system_function_camera_main">照相机功能主界面</string>
    <string name="nav_title_system_function_camera_main_desc">快速照相，快速摄像，自定义照相，自定义摄像</string>
    <string name="nav_title_system_function_camera_normal">照相机普通功能</string>
    <string name="nav_title_system_function_camera_normal_desc">快速照相，快速摄像</string>
    <string name="nav_title_system_function_camera_custom">定制照相机功能</string>
    <string name="nav_title_system_function_camera_custom_desc">定制照相，定制摄像</string>
    <string name="nav_title_system_function_media_player">音频操作</string>
    <string name="nav_title_system_function_media_player_desc">音频的播放和录制</string>
    <string name="nav_title_system_function_tts">TTS操作</string>
    <string name="nav_title_system_function_tts_desc">TextToSpeech 只识别英文</string>
    <string name="nav_title_system_function_ringtone">铃声设置</string>
    <string name="nav_title_system_function_ringtone_desc">设置来电，闹钟，通知的铃声</string>
    <string name="nav_title_animation_main">动画主界面</string>
    <string name="nav_title_animation_main_desc">Tween动画，Drawable动画，Property动画，MaterialDesign动画</string>
    <string name="nav_title_animation_tween_main">补间动画主界面</string>
    <string name="nav_title_animation_tween_main_desc">所有补间动画，自定义补间动画，动画合集</string>
    <string name="nav_title_animation_tween_animation_all">所有的补间动画</string>
    <string name="nav_title_animation_tween_animation_all_desc">AlphaAnimation，RotateAnimation, ScaleAnimation, TranslateAnimation,AnimationSet</string>
    <string name="nav_title_drawable_animation">帧动画界面</string>
    <string name="nav_title_drawable_animation_desc">帧动画页面XML和java代码实现帧动画</string>
    <string name="nav_title_animator_all">属性动画</string>
    <string name="nav_title_animator_all_desc">Animator,ValueAnimator,ObjectAnimator,TimeAnimator</string>
    <string name="nav_title_request">网络请求页面</string>
    <string name="nav_title_request_desc">所有的网络OKHttp、Refit</string>
    <string name="nav_title_request_ok">OKHttp请求</string>
    <string name="nav_title_request_ok_desc">OKHttp请求</string>
    <string name="nav_title_animation_md">MD动画</string>
    <string name="nav_title_animation_md_desc">MD动画：涟漪效果</string>
    <string name="nav_title_design_pattern_main">设计模式主页面</string>
    <string name="nav_title_design_pattern_main_desc">23中设计模式介绍</string>
    <string name="nav_title_design_pattern_singleton_main">单例模式设计模式主页面</string>
    <string name="nav_title_design_pattern_singleton_main_desc">确保某一个类只有一个实例，而且自行实例化并向整个系统提供这个实例</string>
    <string name="nav_title_design_pattern_singleton_impl_list">单例模式模式具体实现列表</string>
    <string name="nav_title_design_pattern_singleton_impl_list_desc">单例模式具体实现的相关代码</string>
    <string name="nav_title_design_pattern_builder_main">建造者模式设计模式主页面</string>
    <string name="nav_title_design_pattern_builder_main_desc">将一个复杂对象的构建和它的表示分离，是的同样的构建过程可以创建不同的表示</string>
    <string name="nav_title_design_pattern_builder_impl_main">建造者模式具体实现主页面</string>
    <string name="nav_title_design_pattern_builder_impl_main_desc">建造者模式具体实现的相关代码</string>
    <string name="nav_title_design_pattern_builder_uml">建造者模式UML类图</string>
    <string name="nav_title_design_pattern_builder_uml_desc">建造者模式UML类图图片展示</string>
    <string name="nav_title_design_pattern_builder_impl_test">建造者模式测试主页面</string>
    <string name="nav_title_design_pattern_builder_impl_test_desc">建造模式测试的页面，测试简单工厂功能</string>
    <string name="nav_title_design_pattern_prototype_main">原型模式设计模式主页面</string>
    <string name="nav_title_design_pattern_prototype_main_desc">使用原型实例指定创建对象的种类，并且通过拷贝这些原型创建新的对象。原型模式是一种对象创建型模式。</string>
    <string name="nav_title_design_pattern_prototype_impl_main">原型模式具体实现主页面</string>
    <string name="nav_title_design_pattern_prototype_impl_main_desc">原型模式具体实现的相关代码</string>
    <string name="nav_title_design_pattern_prototype_uml">原型模式UML类图</string>
    <string name="nav_title_design_pattern_prototype_uml_desc">原型模式UML类图图片展示</string>
    <string name="nav_title_design_pattern_prototype_impl_test">原型模式测试主页面</string>
    <string name="nav_title_design_pattern_prototype_impl_test_desc">建造模式测试的页面，测试简单工厂功能</string>
    <string name="nav_title_design_pattern_factory_main">工厂设计模式主页面</string>
    <string name="nav_title_design_pattern_factory_main_desc">工厂设计模式：简单工厂设计模式，工厂方法设计模式，抽象工厂设计模式</string>
    <string name="nav_title_design_pattern_factory_simple_main">简单工厂设计模式页面</string>
    <string name="nav_title_design_pattern_factory_simple_main_desc">定义一个工厂类，它可以根据参数的不同返回不同类的实例，被创建的实例通常都具有共同的父类。因此简单工厂模式用于创建实例的方法是静态方法，因此简单工厂模式又被称为静态工厂方法模式，它属于创建型模式</string>
    <string name="nav_title_design_pattern_factory_simple_uml">简单工厂模式UML类图</string>
    <string name="nav_title_design_pattern_factory_simple_uml_desc">简单工厂模式UML类图图片展示</string>
    <string name="nav_title_design_pattern_factory_simple_impl_main">简单工厂模式实现主页面</string>
    <string name="nav_title_design_pattern_factory_simple_impl_main_desc">简单工厂模式的实现</string>
    <string name="nav_title_design_pattern_factory_simple_impl_test">简单工厂模式测试主页面</string>
    <string name="nav_title_design_pattern_factory_simple_impl_test_desc">简单工厂模式测试的页面，测试简单工厂功能</string>
    <string name="nav_title_design_pattern_factory_method_main">工厂方法设计模式页面</string>
    <string name="nav_title_design_pattern_factory_method_main_desc">定义一个用于创建对象的接口，让子类决定将哪一个类实例化。工厂方法模式让一个类的实例化延迟到其子类</string>
    <string name="nav_title_design_pattern_factory_method_uml">工厂方法模式UML类图</string>
    <string name="nav_title_design_pattern_factory_method_uml_desc">工厂方法模式UML类图图片展示</string>
    <string name="nav_title_design_pattern_factory_method_impl_main">工厂方法模式实现主页面</string>
    <string name="nav_title_design_pattern_factory_method_impl_main_desc">工厂方法模式的实现</string>
    <string name="a_local_service_main_service_info">传入服务的信息</string>
    <string name="a_local_service_main_start_service">开启服务</string>
    <string name="a_local_service_main_stop_service">关闭服务</string>
    <string name="a_local_service_main_bind_service">绑定服务</string>
    <string name="a_local_service_main_service_sync">同步数据</string>
    <string name="a_local_service_main_unbind_service">解除绑定服务</string>
    <string name="a_local_service_main_start_second_activity">开启服务第二个界面</string>
    <string name="a_animation_tween_all_duration">Duration</string>
    <string name="a_animation_tween_all_start_offset">StartOffset</string>
    <string name="a_animation_tween_all_repeat_count">RepeatCount</string>
    <string name="a_animation_tween_all_repeat_reverse">Reverse</string>
    <string name="a_animation_tween_all_repeat_restart">Restart</string>
    <string name="a_animation_tween_all_fill_before">FillBefore</string>
    <string name="a_animation_tween_all_fill_after">FillAfter</string>
    <string name="a_animation_tween_all_fill_enabled">FillEnabled</string>
    <string name="a_animation_tween_interpolator_start_anim">开始执行</string>
    <string name="a_animation_tween_interpolator_text_1">差值器1</string>
    <string name="a_animation_tween_interpolator_text_2">差值器2</string>
    <string name="a_animation_tween_interpolator_text_3">差值器3</string>
    <string name="a_animation_tween_interpolator_text_4">差值器4</string>
    <string name="a_animation_tween_interpolator_text_5">差值器5</string>
    <string name="a_animation_tween_interpolator_text_6">差值器6</string>
    <string name="a_animation_tween_interpolator_text_7">差值器7</string>
    <string name="a_animation_tween_interpolator_text_9">差值器9</string>
    <string name="a_animation_tween_interpolator_text_10">差值器10</string>
    <string name="a_animation_tween_interpolator_text_11">差值器11</string>
    <string name="a_animation_tween_interpolator_text_12">差值器12</string>
    <string name="a_animation_tween_interpolator_text_13">差值器13</string>
    <string name="a_copy_tv">文本</string>
    <string name="a_copy_et_hint">默认文本</string>
    <string name="a_copy_btn_text">按钮</string>
</resources>