<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/i_tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_normal_f">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/normal_width_10">

            <TextView
                android:id="@+id/tv_service_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_width_10"
                android:padding="@dimen/normal_width_10"
                android:textColor="@color/color_normal_3"
                android:textSize="@dimen/text_size_normal_6" />

            <EditText
                android:id="@+id/et_service_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_width_30"
                android:background="@drawable/a_login_et_bg"
                android:gravity="center_horizontal"
                android:hint="@string/a_local_service_main_service_info"
                android:lines="1"
                android:padding="@dimen/normal_width_10"
                android:textColor="@color/color_normal_3"
                android:textColorHint="@color/a_login_account_hint"
                android:textSize="@dimen/text_size_normal_6" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_width_30"
                android:background="@drawable/button_bg"
                android:padding="@dimen/normal_width_10"
                android:text="@string/a_local_service_main_start_service"
                android:textColor="@color/color_normal_3"
                android:textSize="@dimen/text_size_normal_8" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_width_30"
                android:background="@drawable/button_bg"
                android:padding="@dimen/normal_width_10"
                android:text="@string/a_local_service_main_stop_service"
                android:textColor="@color/color_normal_3"
                android:textSize="@dimen/text_size_normal_8" />

            <Button
                android:id="@+id/btn_bind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_width_30"
                android:background="@drawable/button_bg"
                android:padding="@dimen/normal_width_10"
                android:text="@string/a_local_service_main_bind_service"
                android:textColor="@color/color_normal_3"
                android:textSize="@dimen/text_size_normal_8" />

            <Button
                android:id="@+id/btn_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_width_30"
                android:background="@drawable/button_bg"
                android:padding="@dimen/normal_width_10"
                android:text="@string/a_local_service_main_service_sync"
                android:textColor="@color/color_normal_3"
                android:textSize="@dimen/text_size_normal_8" />

            <Button
                android:id="@+id/btn_unbind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_width_30"
                android:background="@drawable/button_bg"
                android:padding="@dimen/normal_width_10"
                android:text="@string/a_local_service_main_unbind_service"
                android:textColor="@color/color_normal_3"
                android:textSize="@dimen/text_size_normal_8" />

            <Button
                android:id="@+id/btn_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_width_30"
                android:background="@drawable/button_bg"
                android:padding="@dimen/normal_width_10"
                android:text="@string/a_local_service_main_start_second_activity"
                android:textColor="@color/color_normal_3"
                android:textSize="@dimen/text_size_normal_8" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>